repair phone overflow

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -221,6 +221,7 @@ main {
 			display: flex;
 			flex-direction: column;
             font-family: 'Montserrat', sans-serif;
+            
 			img {
 				width: 20%;
 			}
@@ -233,24 +234,28 @@ main {
 				text-decoration: none;
 				color: #13a533;
 			}
+            
 
-			.contract {
-				display: flex;
-				flex-wrap: wrap;
-				padding-bottom: 10px;
-			}
-			.twitter {
-				display: flex;
-				padding-bottom: 10px;
-			}
-			.discord {
-				display: flex;
-				padding-bottom: 10px;
-			}
-			.opensea {
-				display: flex;
-				padding-bottom: 10px;
-			}
+			// .contract {
+			// 	display: flex;
+			// 	flex-wrap: wrap;
+			// 	padding-bottom: 10px;
+			// }
+			// .twitter {
+			// 	display: flex;
+			// 	padding-bottom: 10px;
+			// }
+			// .discord {
+			// 	display: flex;
+			// 	padding-bottom: 10px;
+			// }
+			// .opensea {
+			// 	display: flex;
+			// 	padding-bottom: 10px;
+			// }
+            word-wrap: break-word;
+            text-align: center;
+            
 		}
 	}
 }
@@ -350,6 +355,7 @@ border: 1px solid rgba(61, 61, 61, 0.3);
                 margin-bottom: 30px;
             }
           .links{
+            text-align: left;
             p{
                 font-size: 36px;
                 margin-right: 15px;
